# fileman

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
etc/: fileman.desktop
scripts/: replay_runner.sh
src/: app_state.rs  archive.rs  core.rs  elevate.rs  image_decode.rs  input.rs  lib.rs  main.rs  replay.rs  replay_runner.rs  settings.rs  sftp.rs  snapshot.rs  snapshot_render.rs  theme.rs  update.rs  workers.rs
src/syntax/: cmake.rs  csv.rs  mod.rs  nix.rs  ron.rs  toml.rs
src/ui/: command_bar.rs  editor.rs  help.rs  mod.rs  modals.rs  panel.rs  preview.rs  props_dialog.rs  quick_jump.rs  settings.rs  theme_picker.rs
tests/: TEST_PLAN.md  gui_smoke_test.sh  sftp_localhost.rs
tests/cases/: archive_navigate_back.ron  archive_subdir.ron  cross_panel.ron  edit.ron  edit_insert.ron  edit_save.ron  edit_selection.ron  enter_dir.ron  file_ops.ron  help.ron  help_close.ron  history.ron  mkdir.ron  move_file.ron  navigation.ron  new_file.ron  page_navigation.ron  panel_swap.ron  panels.ron  preview.ron  preview_escape.ron  preview_text.ron  search.ron  search_content.ron  search_navigate.ron  selection.ron  selection_toggle.ron  tabs.ron
tests/data/basic/: source.txt
tests/data/edit_test/: whitespace.txt
themes/: dark.json  light.toml
wix/: License.rtf  main.wxs
