[package]
name = "fileman"
version = "0.3.3"
description = "Two-panel file manager"
keywords = ["file-manager", "egui", "blade"]
categories = ["filesystem"]
license = "MIT"
repository = "https://github.com/kvark/fileman"
authors = ["Dzmitry Malyshau"]
edition = "2024"
default-run = "fileman"
exclude = [
    "etc/snapshots/",
    "etc/macos/",
    "etc/windows/",
    "tests/",
    "scripts/",
    ".github/",
    "PLAN.md",
]

[package.metadata.bundle]
name = "FileMan"
identifier = "com.fileman.app"
icon = ["etc/macos/icon.png", "etc/windows/icon.ico"]

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
zune-core = "0.5"
zune-bmp = "0.5"
zune-image = { version = "0.5", default-features = false, features = ["jpeg", "png", "bmp", "metadata"] }
gif = "0.14"
image-webp = "0.2"
png = "0.18"
exif = { package = "kamadak-exif", version = "0.6" }
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"
ron = "0.12"
blade-egui = { git = "https://github.com/kvark/blade", rev = "3a72838" }
blade-graphics = { git = "https://github.com/kvark/blade", rev = "3a72838" }
egui = "0.34"
egui-winit = "0.34"
winit = "0.30.5"
once_cell = "1.19"
syntect = "5"
memchr = "2.7"
ssh2 = "0.9"
dds = "0.2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
semver = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
users = "0.11"

[package.metadata.deb]
maintainer = "Dzmitry Malyshau"
section = "utils"
assets = [
    ["target/release/fileman", "usr/bin/fileman", "755"],
    ["etc/fileman.desktop", "usr/share/applications/fileman.desktop", "644"],
    ["etc/fileman.svg", "usr/share/icons/hicolor/scalable/apps/fileman.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fileman", dest = "/usr/bin/fileman", mode = "755" },
    { source = "etc/fileman.desktop", dest = "/usr/share/applications/fileman.desktop", mode = "644" },
    { source = "etc/fileman.svg", dest = "/usr/share/icons/hicolor/scalable/apps/fileman.svg", mode = "644" },
]

[features]
default = []
self-update = ["reqwest", "semver"]
vendored-openssl = ["ssh2/vendored-openssl"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gles)'] }
